--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -84,9 +84,10 @@ jobs:
         run: |
           docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
-      - name: Stop and remove container if running
+      - name: Stop and remove existing container
         run: |
-          docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls && docker rm -fv cnncls
+          docker stop cnncls || true
+          docker rm cnncls || true
 
       - name: Run Docker Image to serve users
         run: |
