--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -89,9 +89,21 @@ jobs:
           docker stop cnncls || true
           docker rm cnncls || true
 
-      - name: Run Docker Image to serve users
+      - name: Run Docker container
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+          IMAGE_TAG: latest
         run: |
-          docker run -d -p 8080:8080 --name=cnncls -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          docker run -d \
+            -p 8080:8080 \
+            --name cnncls \
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -e AWS_REGION=${{ secrets.AWS_REGION }} \
+            -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+            $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
       - name: Clean previous images and containers
         run: |
           docker system prune -f
